--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@rollup/plugin-commonjs": "^19.0.1",
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@rollup/plugin-typescript": "^8.2.3",
+    "@types/chalk": "^2.2.0",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
-    "chalk": "^4.1.1",
     "eslint": "^7.30.0",
     "rollup": "^2.53.2",
     "rollup-plugin-terser": "^7.0.2",
@@ -29,6 +29,7 @@
   "dependencies": {
     "@types/node": "^16.6.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "chalk": "^4.1.2"
   }
 }
